# Romanized_Nepali

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vitest.config.ts
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
docs/: COMPANION_APP_ARCHITECTURE.md  COMPANION_APP_MVP.md  COMPETITOR_PROBE_001.md  COMPETITOR_PROBE_PROTOCOL.md  COMPETITOR_SCORECARD_TEMPLATE.md  CONFIDENCE_GATE.md  CONSENTED_DATA_COLLECTION_POLICY.md  CONVERSION_CORRECTNESS_EXECUTION_RULES.md  CORRECTION_MEMORY.md  DAEMON_IPC_IMPLEMENTATION_REPORT.md  DATA_POLICY.md  DATA_SOURCES.md  DICTIONARY_NE_EVALUATION.md  ENGINEERING_MVP_VS_PRODUCT_MVP.md  ENGINE_CONTRACT.md  ENGINE_QUALITY_SCORECARD.md  ENGINE_SAFETY_FOUNDATION.md  ENGLISH_SUFFIX_PARSER.md  FAILURE_TAXONOMY.md  FINAL_CONVERSION_CORRECTNESS_GAP_CLOSURE.md  FINAL_GAP_CLOSURE_MATRIX.md  FINAL_GAP_CLOSURE_REPORT.md  FINAL_KEYBOARD_GAP_CLOSURE.md  FINAL_PERFORMANCE_REPORT.md  FINAL_PRODUCTION_SCORECARD.md  FINAL_PUBLIC_CLAIMS_POLICY.md  FINAL_RELEASE_READINESS_GATE.md  FIRST_RUN_ONBOARDING_DEFAULTS.md  INPUT_SURFACE_STRATEGY.md  INSTALLER_UNINSTALLER_CHECKLIST.md  KEYBOARD_APP_PREREQUISITES.md  KEYBOARD_CANDIDATE_RANKING.md  KEYBOARD_DICTIONARY_LOOKUP.md  KEYBOARD_ENGINE_API.md  KEYBOARD_LAB.md  KEYBOARD_MEMORY.md  KEYBOARD_NATIVE_RELEASE_CRITERIA.md  KEYBOARD_PERFORMANCE_BASELINE.md  (+102 more)
native/: README.md
native/windows-tsf/skeleton/: CMakeLists.txt  LekhTextService.placeholder.cpp  lekh_tsf_contract.md
(+375 files in other folders)
